tests/scan/fixtures/validation/negative/clean_go_generate/go.mod
module github.com/example/clean_go_generate

go 1.21
